--- a/web.css
+++ b/web.css
@@ -19,10 +19,12 @@ h3{
     background-color: #CF3C52;
     display: flex;
     justify-content:space-evenly;
-     padding: 30px;
-    font-size: 150%;
+    padding: 30px;
+    font-size: 30px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin: 0;
+    font-weight: bolder;
+
 }
 
 #LOGO{
@@ -38,13 +40,15 @@ table,td{
       border:2px solid #CF3C52;
       font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
       font-size: 20px;
+    font-weight: bolder;
 }
 
 th{
     color: #CF3C52;
     border:2px solid #CF3C52;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 25px;
+    font-size: 30px;
+    font-weight: bolder;
 
 }
 
@@ -52,3 +56,17 @@ td{
 text-align: center;
 }
 
+#Quiz{
+    background-color:#CF3C52;
+    color: aliceblue;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 25px;
+    display: flex;
+    font-weight:bolder;
+    height: 70px;
+    width: 140px;
+}
+#center{
+    display: flex;
+    justify-content: center;
+}
