--- a/web.css
+++ b/web.css
@@ -10,9 +10,12 @@ h1{
 a{
     color: #FFE6E6;
 }
-h3{
+p{
     color:#CF3C52;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 25px;
+    font-weight: bolder;
+
 }
 
 .navbar ul{
